# ikama.app

./: .gitignore  AGENTS.md  DEPLOYMENT_GUIDE.md  MAWAQIT_API_ANALYSIS.md  MIGRATION.md  README.md  README_TAURI.md  RELEASE_NOTES.md  TEST_SUMMARY.md  analysis_options.yaml  create-icon.cjs  feedback.txt  index.html  package-lock.json  package.json  progress.txt  prompt.txt  pubspec.yaml  release.ps1  tailwind.config.js  test_fetch.py  test_mawaqit.py  test_mawaqit2.py  test_mawaqit3.py  to-do-list.md  tsconfig.json  user_prompts.txt  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
Scraped_mawaqit_API/: .gitignore  .vercelignore  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
Scraped_mawaqit_API/api/: countries.ts  health.ts
Scraped_mawaqit_API/data/: countries.json
Scraped_mawaqit_API/lib/: cache.ts  parser.ts  scraper.ts  types.ts
docs/: index.html
lib/: main.dart
src/: App.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  mosque_commands.rs  prayer_commands.rs  settings_commands.rs
src-tauri/src/db/: database.rs  migrations.rs  mod.rs
src-tauri/src/models/: geo_location.rs  mod.rs  mosque.rs  prayer.rs  provider.rs
src-tauri/src/providers/: community_wrapper_provider.rs  fallback_provider.rs  mawaqit_provider.rs  mod.rs  official_api_provider.rs  prayer_data_provider.rs  scraping_provider.rs
src-tauri/src/services/: location_service.rs  mod.rs  notification_service.rs  prayer_engine.rs
(+65 files in other folders)
